Updated most controller,utility,entity with javadocs and fix diagnosis and outcome